<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="cd_add_new_task">Add new task</string>
    <string name="cd_important_task">Important task</string>
    <string name="hint_task_name">Task name</string>
    <string name="important_task">Important task</string>
    <string name="item_search_text">Search</string>
    <string name="item_sort_text">Sort</string>
    <string name="item_sort_by_name_text">Sort by name</string>
    <string name="item_sort_by_date_created_text">Sort by date created</string>
    <string name="item_hide_completed_text">Hide completed</string>
    <string name="item_delete_all_completed_text">Delete all completed</string>
    <string name="task_name_is_empty">Task name is empty</string>
</resources>